# DetectionCloudSecurityRisk

./: .checkov.yaml  .env  .env.example  .gitignore  .target_env  CLAUDE.md  CLEANUP_MANIFEST.md  Finding.py  Makefile  README.md  checkov_report.json  detection.py  docker-compose.yml  main.py  main.tf  openapi.yaml  pyproject.toml  requirements.txt  run_checkov.sh  scratch_spectral_report.json  semgrep_report.json  semgrep_routes.json  semgrep_routes_bola.json  setup_env.sh  terraform.tf  terraform.tfstate  terraform.tfstate.backup  test_filter.py  test_load.py  test_sources.py
.github/workflows/: ci.yml
cloud_security_analyzer/: __init__.py  launcher.py
cloud_security_analyzer/controllers/: __init__.py  dashboard_controller.py  endpoints_controller.py  findings_controller.py  main_controller.py
cloud_security_analyzer/core/: __init__.py  config.py  worker.py
cloud_security_analyzer/gui/: __init__.py
cloud_security_analyzer/models/: __init__.py  cloud_risk_model.py  endpoint_model.py  finding_model.py
cloud_security_analyzer/services/: __init__.py  export_service.py  pipeline_service.py  scan_service.py  state_service.py
cloud_security_analyzer/tests/: __init__.py  test_models.py  test_services.py
cloud_security_analyzer/widgets/: __init__.py  charts.py  filter_panel.py  orbit_widget.py  risk_card.py  scanner_status_widget.py  search_bar.py  severity_badge.py
config/environments/: .target_env
config/scanner_configs/: route-detect.yaml  spectral-owasp.yaml
data/output/: benchmark_results.json  bola_scan_results.json  findings_report.json  unified_api_inventory.json  zap_report.json
docs/: odd.md  owasp_api4_coverage.md  rad.md
docs/adr/: adr-001-risk-scoring.md  adr-002-architecture-separation.md  adr-003-credentials-management.md
docs/coverage/: owasp_api2_coverage.md  owasp_api4_coverage.md
docs/diagrams/: component_diagram.puml
docs/workflows/: risk_assessment_flow.md
entrypoints/operations/: run_api_security.sh  run_iac_analysis.sh  setup_environment.sh  setup_ollama.sh
entrypoints/runners/: run_all_security_tests.py  run_all_validations.py  run_bola_dynamic_demo.py  run_bola_repo_target.py  run_bola_scan.py  run_broken_auth_scan.py  run_crapi_validation.py  run_ground_truth_validation.py  run_semgrep_repo_target.py  run_spectral_repo_target.py  run_unified_core_scanners.py
ground_truth_target/: README.md  answer_key.md
ground_truth_target/vulnerable_app/: app.py  requirements.txt
infrastructure/terraform/: vulnerable_infra.tf
output/: benchmark_results.json  bola_scan_report.json  bola_scan_report.md  bola_scan_results.json  bopla_dynamic_findings_example.json  bopla_inference_example.json  bopla_inventory_example.json  dashboard.html  findings_report.json  openapi_merged.yaml  openapi_runtime.yaml  raw_traffic.json  report_2026-06-21_13-41-16.json  report_2026-06-21_13-41-16.md  report_2026-06-25_21-51-06.json  report_2026-06-25_21-51-06.md  report_2026-06-25_23-13-38.json  report_2026-06-25_23-13-38.md  report_2026-06-25_23-34-46.json  report_2026-06-25_23-34-46.md  report_2026-06-25_23-41-13.json  report_2026-06-25_23-41-13.md  unified_api_inventory.json  unified_security_report.json
output/bopla/: bopla_report.json  bopla_report.md
output/unified_run/: report_2026-07-18_15-40-57.json
problema_api/: openapi.yaml
problema_api/bola/: app.py  database.py  resource.py
problema_misconfiguration/terraform/: main.tf  vulnerable_infra.tf
remediation/: __init__.py  llm_provider.py  remediation_engine.py
remediation/knowledge_base/: local_cache.json  owasp_api_remediation.json
remediation/models/: __init__.py  remediation_model.py
remediation/tests/: __init__.py  test_remediation.py
reports/: security_summary_20260606_195555.html  unified_inventory_20260606_204146.json  unified_inventory_20260614_215055.json  unified_report_20260606_204146.json  unified_report_20260614_215055.json
reports/checkov/: checkov_report.json
reports/zap/: zap_report.html  zap_report.json
rules/: route-detect.yaml  spectral-owasp.yaml
scripts/: 1_setup_environment.sh  3_api_security.sh  check_target.sh  run_all_security_tests.py  run_bopla.py  run_bopla_dynamic_demo.py  run_ground_truth_validation.py  run_zap_scan.sh
scripts/localstack/: check_target.sh  start_localstack.sh
scripts/scanning/: run_zap_scan.sh
scripts/setup/: start_system.sh
scripts/terraform/: run_terraform.sh
soluzione_api/: main.py
soluzione_api/output/: openapi_runtime.json  unified_api_inventory.json
soluzione_api/src/: api_discovery_pipeline.py
soluzione_misconfiguration/: checkov_scanner.py  main.py
src/: __init__.py  api_discovery_pipeline.py  main.py
src/application/: __init__.py  event_bus.py  orchestrator.py  plugin_loader.py
src/core/: assertion_engine.py  config.py  correlation_engine.py  dynamic_orchestrator.py  identity_context.py  policy_engine.py  report_builder.py  runtime_enricher.py  shadow_api_hunter.py  terraform_scanner.py
src/correlation_engine/: engine.py
src/detectors/: bola_analyzer.py  shadow_api_hunter.py
src/domain/: __init__.py  entities.py  events.py  exceptions.py  interfaces.py
src/enrichers/: runtime_enricher.py
src/interfaces/: rule_interface.py  scanner_interface.py
src/model/: BucketEntity.py
src/normalization/: __init__.py  normalizer.py
src/openapi/: dashboard_generator.py  generator.py
src/output/: dashboard.html  openapi_runtime.json  openapi_runtime.yaml  raw_traffic.json  unified_api_inventory.json
src/parsers/: normalizer.py
src/presentation/: api.py  cli.py  dashboard_generator.py  rest_api.py
src/scanners/: checkov_runner.py  semgrep_runner.py  spectral_runner.py  zap_runner.py
src/static_analysis/: scanner.py
src/utils/: report_builder.py
target_poc/: openapi.yaml
test_targets/: docker-compose.yml
test_targets/bola/: app.py  extract_username.py
tests/: test_ast_parser.py  test_bopla.py  test_bopla_dynamic.py  test_bopla_inference.py  test_bopla_integration.py  test_discovery.py  test_dynamic_tester.py  test_reporter.py  test_terraform_scanner.py
(+497 files in other folders)
